Refactor: Modernize code patterns and remove redundancies
- Replace Stream.collect(Collectors.toList()) with Stream.toList() for cleaner code and immutable results
- Remove unnecessary toString() calls in logger statements as formatting handles conversion automatically